# object_location

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculate_time.py  pcl_descriptors.md
config/: global_param.cfg  local_param.cfg
data/: ArmadilloBack_330.ply  ArmadilloBack_330_new.ply
include/: global_matcher.h  global_parameters.h  local_matcher.h  local_parameters.h  param.conf  read_config.h
src/: feature_matching.cpp  global_matcher.cpp  local_matcher.cpp
test/: test.cpp  test_match.cpp  test_recognize.cpp
